--- a/styleseccion1.css
+++ b/styleseccion1.css
@@ -205,6 +205,8 @@
   margin: 0 5px;
   margin-block-end: 16px;
   line-height: 26px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
 
 .parrafo-renglon {
@@ -245,7 +247,7 @@
 .diagonal-azul {
   position: absolute;
   top: -50px;
-  height: 880px;
+  height: 900px;
   width: 100%;
   background-color: #0a2540;
   transform: skewY(-10deg);
@@ -305,6 +307,7 @@
   color: #adbdcc;
   font-size: 16px;
   line-height: 18px;
+  font-family: "Roboto", sans-serif;
 }
 
 .titulos__iconos3 {
@@ -347,19 +350,103 @@
   line-height: 1.5em;
 }
 
+.contenedor__iconos4{
+  margin: 32px 0;
+}
+
 .iconos__seccion4{
-  height: 30px;
+  height: 40px;
   margin-bottom: 8px;
+  
 }
 
 .titulos__iconos{
   font-family: "Roboto", sans-serif;
   margin: 0 0 16px 0;
-  font-weight: 100;
+  font-weight: 500;
+  font-size: 15px;
 }
 
 .seccion4__parrafo{
-  margin: 20px 0 30px 0;  
+  margin: 20px 0 30px 0;
+  font-family: "Roboto", sans-serif;  
 }
 
+.seccion5{
+    position: relative;
+    z-index: 1;  
+  }
+
+  .diagonal-azul5{
+    position: absolute;
+    top: -10px;
+    height: 880px;
+    width: 100%;
+    background-color: #0a2540;
+    transform: skewY(-10deg);
+    z-index: -1;
+  } 
+
+  .imagen__mundo{
+    opacity: 10%;
+    max-width: 844px;
+    top: 15%;
+    position: absolute;
+    z-index: 2;    
+  }
+
+  .seccion__global{
+    padding: 64px 16px;
+  }
+
+  .subtitulo__seccion5 {
+    color: #00d4ff;
+    font-family: "Anek Telugu", sans-serif;
+    font-size: 15px;
+    font-weight: 500;    
+  }
+  
+  .titulo__seccion5 {
+    color: #f7f9fc;
+    font-size: 32px;
+    margin: 16px 0;
+    font-family: "Anek Telugu", sans-serif;
+    display: flex;
+    justify-content: left;  
+    line-height: 1.5em;
+  }
+
+  .parrafo__seccion5 {
+    color: #f7f9fc;
+    font-size: 18px;
+    margin: 0 5px;
+    margin-block-end: 16px;
+    line-height: 26px;
+    font-family: "Roboto", sans-serif;
+  }
+
+  .parrafo-renglon5{
+    color: #00d4ff;
+    margin: 16px 0;
+  }
+  
+  .indicadores__seccion5{
+    color: #f7f9fc;
+    font-family:"Anek Telugu", sans-serif;
+    border-left: 2px solid #00d4ff;
+    font-weight: 500;
+    font-size: 16px;
+    width: 100%;
+    padding: 0 0 0 8px;
+    margin: 16px 0;
+  }
+
+.parrafo__indicadores5{
+  color:#6d7a88;
+  font-size: 14px;   
+  margin: 16px 0;
+  letter-spacing: 0.25px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
 
