--- a/styleseccion1.css
+++ b/styleseccion1.css
@@ -81,7 +81,7 @@
 .parrafo1 {
   font-size: 18px;
   line-height: 26px;
-  margin:16px ;
+  margin: 16px;
 }
 
 .botones {
@@ -133,15 +133,13 @@
 }
 
 .contenedor__seccion2 {
-  background-color: #f7f9fc;  
+  background-color: #f7f9fc;
 }
 
 .seccion2 {
   display: flex;
   justify-content: center;
   display: grid;
-  /* grid-template-columns: auto;
-  grid-template-rows: 4; */
   padding: 16px;
 }
 
@@ -180,7 +178,6 @@
     "celular imagenSlack imagenSlack"
     "celular tendencias tendencias";
   grid-gap: 2rem;
-  /* z-index: -2; */
   background-color: transparent;
   padding: 32px 16px;
 }
@@ -239,9 +236,9 @@
   height: 90%;
 }
 
-.seccion3{
+.seccion3 {
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .diagonal-azul {
@@ -254,7 +251,7 @@
   z-index: -1;
 }
 
-.contenedor__seccion3{
+.contenedor__seccion3 {
   padding: 16px;
 }
 
@@ -263,7 +260,6 @@
   font-family: "Anek Telugu", sans-serif;
   font-size: 15px;
   font-weight: 500;
-  
 }
 
 .titulo__seccion3 {
@@ -272,7 +268,7 @@
   margin: 16px 0;
   font-family: "Anek Telugu", sans-serif;
   display: flex;
-  justify-content: left;  
+  justify-content: left;
   line-height: 1.5em;
 }
 
@@ -329,11 +325,11 @@
   font-weight: 750;
 }
 
-.seccion4{
+.seccion4 {
   padding: 16px;
 }
 
-.subtitulo__seccion4{
+.subtitulo__seccion4 {
   color: #6962f7;
   font-family: "Anek Telugu", sans-serif;
   font-size: 15px;
@@ -341,112 +337,252 @@
   margin: 16px 0;
 }
 
-.titulo__seccion4{  
+.titulo__seccion4 {
   font-size: 32px;
   margin: 16px 0;
   font-family: "Anek Telugu", sans-serif;
   display: flex;
-  justify-content: left;  
+  justify-content: left;
   line-height: 1.5em;
 }
 
-.contenedor__iconos4{
+.contenedor__iconos4 {
   margin: 32px 0;
 }
 
-.iconos__seccion4{
+.iconos__seccion4 {
   height: 40px;
   margin-bottom: 8px;
-  
 }
 
-.titulos__iconos{
+.titulos__iconos {
   font-family: "Roboto", sans-serif;
   margin: 0 0 16px 0;
   font-weight: 500;
   font-size: 15px;
 }
 
-.seccion4__parrafo{
+.seccion4__parrafo {
   margin: 20px 0 30px 0;
-  font-family: "Roboto", sans-serif;  
+  font-family: "Roboto", sans-serif;
 }
 
-.seccion5{
-    position: relative;
-    z-index: 1;  
-  }
+.seccion5 {
+  position: relative;
+}
 
-  .diagonal-azul5{
-    position: absolute;
-    top: -10px;
-    height: 880px;
-    width: 100%;
-    background-color: #0a2540;
-    transform: skewY(-10deg);
-    z-index: -1;
-  } 
+.diagonal-azul5 {
+  position: absolute;
+  top: -10px;
+  height: 1000px;
+  width: 100%;
+  background-color: #0a2540;
+  transform: skewY(-10deg);
+  z-index: -1;
+}
 
-  .imagen__mundo{
-    opacity: 10%;
-    max-width: 844px;
-    top: 15%;
-    position: absolute;
-    z-index: 2;    
-  }
+.imagen__mundo {
+  opacity: 10%;
+  max-width: 844px;
+  top: 15%;
+  position: absolute;
+  z-index: 2;
+}
 
-  .seccion__global{
-    padding: 64px 16px;
-  }
+.seccion__global {
+  padding: 64px 16px;
+}
 
-  .subtitulo__seccion5 {
-    color: #00d4ff;
-    font-family: "Anek Telugu", sans-serif;
-    font-size: 15px;
-    font-weight: 500;    
-  }
-  
-  .titulo__seccion5 {
-    color: #f7f9fc;
-    font-size: 32px;
-    margin: 16px 0;
-    font-family: "Anek Telugu", sans-serif;
-    display: flex;
-    justify-content: left;  
-    line-height: 1.5em;
-  }
+.subtitulo__seccion5 {
+  color: #00d4ff;
+  font-family: "Anek Telugu", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+}
 
-  .parrafo__seccion5 {
-    color: #f7f9fc;
-    font-size: 18px;
-    margin: 0 5px;
-    margin-block-end: 16px;
-    line-height: 26px;
-    font-family: "Roboto", sans-serif;
-  }
+.titulo__seccion5 {
+  color: #f7f9fc;
+  font-size: 32px;
+  margin: 16px 0;
+  font-family: "Anek Telugu", sans-serif;
+  display: flex;
+  justify-content: left;
+  line-height: 1.5em;
+}
 
-  .parrafo-renglon5{
-    color: #00d4ff;
-    margin: 16px 0;
-  }
-  
-  .indicadores__seccion5{
-    color: #f7f9fc;
-    font-family:"Anek Telugu", sans-serif;
-    border-left: 2px solid #00d4ff;
-    font-weight: 500;
-    font-size: 16px;
-    width: 100%;
-    padding: 0 0 0 8px;
-    margin: 16px 0;
-  }
+.parrafo__seccion5 {
+  color: #f7f9fc;
+  font-size: 18px;
+  margin: 0 5px;
+  margin-block-end: 16px;
+  line-height: 26px;
+  font-family: "Roboto", sans-serif;
+}
 
-.parrafo__indicadores5{
-  color:#6d7a88;
-  font-size: 14px;   
+.parrafo-renglon5 {
+  color: #00d4ff;
+  margin: 16px 0;
+}
+
+.indicadores__seccion5 {
+  color: #f7f9fc;
+  font-family: "Anek Telugu", sans-serif;
+  border-left: 2px solid #00d4ff;
+  font-weight: 500;
+  font-size: 16px;
+  width: 100%;
+  padding: 0 0 0 8px;
+  margin: 16px 0;
+}
+
+.parrafo__indicadores5 {
+  color: #6d7a88;
+  font-size: 14px;
   margin: 16px 0;
   letter-spacing: 0.25px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
 
+.seccion6 {
+  padding: 0 16px;
+  background-color: white;
+}
+
+.subtitulo__seccion6 {
+  color: #6962f7;
+  font-family: "Anek Telugu", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.titulos__seccion6 {
+  font-size: 32px;
+  margin: 16px 0;
+  font-family: "Anek Telugu", sans-serif;
+  display: flex;
+  justify-content: left;
+  line-height: 1.5em;
+}
+
+.parrafos__seccion6 {
+  font-size: 18px;
+  margin: 0 5px;
+  margin-block-end: 16px;
+  line-height: 26px;
+  font-family: "Roboto", sans-serif;
+}
+
+.parrafo__renglon6 {
+  color: #6962f7;
+}
+
+.boton__star6 {
+  background-color: #7000ff;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  border-radius: 25px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  padding: 8px 16px;
+  margin: 16px 5px;
+  font-weight: 700;
+  width: 130px;
+}
+
+.tarjeta__seccion6 {
+  margin: 32px 0;
+  border-radius: 20px;
+  height: 445px;
+  box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+.diagonal__seccion6 {
+  background: linear-gradient(
+    101.33deg,
+    #08209a 0.76%,
+    #6563ff 33.33%,
+    #36c5f0 76.92%,
+    #83e2ff 96.96%
+  );
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -55%;
+  transform: skewY(-5deg);
+  z-index: -1;
+}
+
+.avatar__femenino {
+  position: absolute;
+  left: 80px;
+  width: 75px;
+}
+
+.avatar__masculino {
+  position: absolute;
+  left: 130px;
+  width: 74px;
+}
+
+.texto__tarjeta6 {
+  padding: 50px 64px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.parrafo__tarjeta {
+  font-size: 14px;
+  line-height: 18px;
+  color: #000;
+  letter-spacing: 0.25px;
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+}
+
+.titulo__tarjeta6 {
+  color: #6962f7;
+  font-family: "Anek Telugu", sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 26px;
+}
+
+.iconos__seccion6 {
+  height: 50px;
+  margin: 8px 0;
+}
+
+.titulos__iconos6 {
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  margin: 0 0 16px 0;
+}
+
+.seccion6__parrafo {
+  color: #adbdcc;
+  font-size: 14px;
+  line-height: 18px;
+  font-family: "Roboto", sans-serif;
+}
+
+.direccionador__seccion6 {
+  background-color: transparent;
+  color: #7000ff;
+  border: none;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin: 25px 5px;
+  font-weight: 750;
+}
