--- a/styleseccion1.css
+++ b/styleseccion1.css
@@ -60,11 +60,13 @@
 }
 
 .main {
-  padding: 16px;
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .contenedor1 {
+  padding: 16px;
   font-style: "Anek Telugu", sans-serif;
 }
 
@@ -81,7 +83,7 @@
 .parrafo1 {
   font-size: 18px;
   line-height: 26px;
-  margin:16px ;
+  margin: 16px;
 }
 
 .botones {
@@ -133,15 +135,13 @@
 }
 
 .contenedor__seccion2 {
-  background-color: #f7f9fc;  
+  background-color: #f7f9fc;
 }
 
 .seccion2 {
   display: flex;
   justify-content: center;
   display: grid;
-  /* grid-template-columns: auto;
-  grid-template-rows: 4; */
   padding: 16px;
 }
 
@@ -180,7 +180,6 @@
     "celular imagenSlack imagenSlack"
     "celular tendencias tendencias";
   grid-gap: 2rem;
-  /* z-index: -2; */
   background-color: transparent;
   padding: 32px 16px;
 }
@@ -239,22 +238,22 @@
   height: 90%;
 }
 
-.seccion3{
+.seccion3 {
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .diagonal-azul {
   position: absolute;
   top: -50px;
-  height: 900px;
+  height: 100%;
   width: 100%;
   background-color: #0a2540;
   transform: skewY(-10deg);
   z-index: -1;
 }
 
-.contenedor__seccion3{
+.contenedor__seccion3 {
   padding: 16px;
 }
 
@@ -263,7 +262,6 @@
   font-family: "Anek Telugu", sans-serif;
   font-size: 15px;
   font-weight: 500;
-  
 }
 
 .titulo__seccion3 {
@@ -272,7 +270,7 @@
   margin: 16px 0;
   font-family: "Anek Telugu", sans-serif;
   display: flex;
-  justify-content: left;  
+  justify-content: left;
   line-height: 1.5em;
 }
 
@@ -329,11 +327,15 @@
   font-weight: 750;
 }
 
-.seccion4{
+.imagenes__seccion3 {
+  display: none;
+}
+
+.seccion4 {
   padding: 16px;
 }
 
-.subtitulo__seccion4{
+.subtitulo__seccion4 {
   color: #6962f7;
   font-family: "Anek Telugu", sans-serif;
   font-size: 15px;
@@ -341,112 +343,109 @@
   margin: 16px 0;
 }
 
-.titulo__seccion4{  
+.titulo__seccion4 {
   font-size: 32px;
   margin: 16px 0;
   font-family: "Anek Telugu", sans-serif;
   display: flex;
-  justify-content: left;  
+  justify-content: left;
   line-height: 1.5em;
 }
 
-.contenedor__iconos4{
+.contenedor__iconos4 {
   margin: 32px 0;
 }
 
-.iconos__seccion4{
+.iconos__seccion4 {
   height: 40px;
   margin-bottom: 8px;
-  
 }
 
-.titulos__iconos{
+.titulos__iconos {
   font-family: "Roboto", sans-serif;
   margin: 0 0 16px 0;
   font-weight: 500;
   font-size: 15px;
 }
 
-.seccion4__parrafo{
+.seccion4__parrafo {
   margin: 20px 0 30px 0;
-  font-family: "Roboto", sans-serif;  
+  font-family: "Roboto", sans-serif;
 }
 
-.seccion5{
-    position: relative;
-    z-index: 1;  
-  }
+.seccion5 {
+  position: relative;
+}
 
-  .diagonal-azul5{
-    position: absolute;
-    top: -10px;
-    height: 880px;
-    width: 100%;
-    background-color: #0a2540;
-    transform: skewY(-10deg);
-    z-index: -1;
-  } 
+.diagonal-azul5 {
+  position: absolute;
+  top: -10px;
+  height: 1000px;
+  width: 100%;
+  background-color: #0a2540;
+  transform: skewY(-10deg);
+  z-index: -1;
+}
 
-  .imagen__mundo{
-    opacity: 10%;
-    max-width: 844px;
-    top: 15%;
-    position: absolute;
-    z-index: 2;    
-  }
+.imagen__mundo {
+  opacity: 10%;
+  max-width: 844px;
+  padding: 16px;
+  position: absolute;
+  z-index: 2;
+}
 
-  .seccion__global{
-    padding: 64px 16px;
-  }
+.seccion__global {
+  padding: 64px 16px;
+}
 
-  .subtitulo__seccion5 {
-    color: #00d4ff;
-    font-family: "Anek Telugu", sans-serif;
-    font-size: 15px;
-    font-weight: 500;    
-  }
-  
-  .titulo__seccion5 {
-    color: #f7f9fc;
-    font-size: 32px;
-    margin: 16px 0;
-    font-family: "Anek Telugu", sans-serif;
-    display: flex;
-    justify-content: left;  
-    line-height: 1.5em;
-  }
+.subtitulo__seccion5 {
+  color: #00d4ff;
+  font-family: "Anek Telugu", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+}
 
-  .parrafo__seccion5 {
-    color: #f7f9fc;
-    font-size: 18px;
-    margin: 0 5px;
-    margin-block-end: 16px;
-    line-height: 26px;
-    font-family: "Roboto", sans-serif;
-  }
+.titulo__seccion5 {
+  color: #f7f9fc;
+  font-size: 32px;
+  margin: 16px 0;
+  font-family: "Anek Telugu", sans-serif;
+  display: flex;
+  justify-content: left;
+  line-height: 1.5em;
+}
 
-  .parrafo-renglon5{
-    color: #00d4ff;
-    margin: 16px 0;
-  }
-  
-  .indicadores__seccion5{
-    color: #f7f9fc;
-    font-family:"Anek Telugu", sans-serif;
-    border-left: 2px solid #00d4ff;
-    font-weight: 500;
-    font-size: 16px;
-    width: 100%;
-    padding: 0 0 0 8px;
-    margin: 16px 0;
-  }
+.parrafo__seccion5 {
+  color: #f7f9fc;
+  font-size: 18px;
+  margin: 0 5px;
+  margin-block-end: 16px;
+  line-height: 26px;
+  font-family: "Roboto", sans-serif;
+}
 
-.parrafo__indicadores5{
-  color:#6d7a88;
-  font-size: 14px;   
+.parrafo-renglon5 {
+  color: #00d4ff;
+  margin: 16px 0;
+}
+
+.indicadores__seccion5 {
+  color: #f7f9fc;
+  font-family: "Anek Telugu", sans-serif;
+  border-left: 2px solid #00d4ff;
+  font-weight: 500;
+  font-size: 16px;
+  width: 100%;
+  padding: 0 0 0 8px;
+  margin: 16px 0;
+}
+
+.parrafo__indicadores5 {
+  color: #6d7a88;
+  font-size: 14px;
   margin: 16px 0;
   letter-spacing: 0.25px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
-
