--- a/styleseccion1media.css
+++ b/styleseccion1media.css
@@ -63,22 +63,32 @@
     grid-row-gap: 1rem;
   }
 
-  .seccion6{
+  .seccion6 {
     display: grid;
     grid-template-columns: 50% 50%;
     border-collapse: separate;
     list-style: none;
-    grid-gap: 1rem; 
-    align-items: center; 
+    grid-gap: 1rem;
+    align-items: center;
   }
 
-  .imagen__mundo{
+  .imagen__mundo {
     height: 85%;
   }
 
-  .tarjeta__seccion6{
+  .tarjeta__seccion6 {
     width: 150%;
-    max-width:470px ;
+    max-width: 470px;
+  }
+
+  .seccion7 {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    border-collapse: separate;
+    list-style: none;
+    grid-gap: 1rem;
+    align-items: center;
+    padding: 45px;
   }
 }
 
@@ -167,17 +177,16 @@
     border-collapse: separate;
     list-style: none;
     grid-gap: 1rem;
-    align-items: center;    
+    align-items: center;
   }
 
-  .columnas__seccion6{
+  .columnas__seccion6 {
     display: grid;
     grid-template-columns: 50% 50%;
     border-collapse: separate;
     list-style: none;
     grid-gap: 1rem;
-    
     line-height: 26px;
-    align-items: center; 
+    align-items: center;
   }
 }
